examples/fail/fail_exception_top_level/brioche.bri
import * as brioche from "brioche";

interface TestType {
  foo: string;
  bar: string;
}

throw new Error("top level exception");
export default () => {
  return brioche.directory({});
}
